--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.1.0",
+    "@types/mdx": "^2.0.11",
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "react": "^18",
