--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
