--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.1.0",
+    "@stripe/react-stripe-js": "^2.5.1",
+    "@stripe/stripe-js": "^3.0.7",
     "@types/mdx": "^2.0.11",
     "clsx": "^2.1.0",
     "graphql": "^16.8.1",
@@ -22,7 +24,9 @@
     "react": "^18",
     "react-dom": "^18",
     "server-only": "^0.0.1",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "stripe": "^14.20.0",
+    "stripe-event-types": "^3.1.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
