--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "codegen": "graphql-codegen --config .graphqlrc.ts"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.9",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.1.0",
